--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,7 @@ credentials.h
 .clang_complete
 .gcc-flags.json
 remotes
+.vscode/.browse.c_cpp.db*
+.vscode/c_cpp_properties.json
+.vscode/launch.json
+.vscode/
